--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "webpack-dev-server": "^1.7.0"
   },
   "dependencies": {
+    "highlight.js": "^8.4.0",
     "react": "^0.13.0",
+    "react-highlight": "^0.5.0",
     "react-redux": "^0.5.1",
     "redux": "^1.0.0-rc"
   }
